--- a/src/global.less
+++ b/src/global.less
@@ -29,7 +29,11 @@ ul,
 ol {
   list-style: none;
 }
-
+.form-row{
+  .ant-form-item{
+    margin-bottom: 0;
+  }
+}
 // 数据列表 样式
 .table-alert {
   margin-bottom: 16px;
