--- a/src/views/dashboard/Workplace.less
+++ b/src/views/dashboard/Workplace.less
@@ -30,9 +30,11 @@
 
   .avatar {
     flex: 0 1 72px;
-
     & > span {
       display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 72px;
       height: 72px;
       border-radius: 72px;
