--- a/src/views/dashboard/Workplace.less
+++ b/src/views/dashboard/Workplace.less
@@ -37,7 +37,7 @@
       justify-content: center;
       width: 72px;
       height: 72px;
-      border-radius: 72px;
+      border-radius: 0;
     }
   }
 
