药品删除,医生离职,删除颜色改为红色

--- a/src/global.less
+++ b/src/global.less
@@ -32,6 +32,9 @@ ol {
 .main-color {
   color: #1890FF;
 }
+.danger-color {
+  color: #ff0000;
+}
 .form-row{
   .ant-form-item{
     margin-bottom: 0;
