--- a/src/global.less
+++ b/src/global.less
@@ -85,7 +85,6 @@ ol {
     white-space: nowrap;
   }
 }
-
 @media (max-width: @screen-xs) {
   .ant-table {
     width: 100%;
@@ -100,5 +99,20 @@ ol {
         }
       }
     }
+  }
+}
+
+.ant-drawer-body{
+  .drawer-ctrl-button {
+    position: absolute;
+    width: 100%;
+    border-top: 1px solid #e8e8e8;
+    padding: 10px 16px;
+    text-align: right;
+    left: 0;
+    bottom: 0;
+    background: #fff;
+    border-radius: 0 0 4px 4px;
+    z-index: 9999;
   }
 }
